# aiace_bulk_downloader

./: .gitignore  Dockerfile  README.md  install_geckodriver.sh  main.py  pyproject.toml
.github/workflows/: publish.yml
bulk_downloader/: __init__.py  utils.py
